--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,11 +1,12 @@
 @charset "utf-8";
 @import url("http://fonts.googleapis.com/earlyaccess/notosanskr.css");
 
-$pageWidth: 980px;
+$pageWidth: 1080px;
 $widePicWidth: 890px;
 $halfPicWidth: 400px;
 
 * {
+    vertical-align: top;
     box-sizing: border-box;
 }
 *:focus {
@@ -29,7 +30,7 @@ button {
     padding:0;
     border:0;
 }
-h2, h3, h4 {
+p, h2, h3, h4 {
     font-weight: normal;
     margin: 0;
     padding: 0;
@@ -37,20 +38,8 @@ h2, h3, h4 {
 a {
     text-decoration: none;
     color:inherit;
-    &:active {
+    &:active, &:link, &:visited, &:hover {
         text-decoration: none;
-        color:inherit;
-    }
-    &:link {
-        text-decoration: none;
-        color:inherit;
-    }
-    &:visited {
-        text-decoration: none;
-        color:inherit;
-    }
-    &:hover {
-        text-decoration: underline;
         color:inherit;
     }
 }
@@ -337,147 +326,6 @@ header {
         margin: 0 auto;
         max-width: 650px;
         text-align: justify;
-    }
-}
-
-.scrap {
-    & .scrap-box {
-        width: 100%;
-        padding: 0 15px;
-        @media screen and (max-width: 500px) {
-            padding: 0;
-        }
-        & .article {
-            position: relative;
-            display: inline-block;
-            width: 25%;
-            height: 405px;
-            padding: 0 8px 0 8px;
-            margin-bottom: 12px;
-            vertical-align: top;
-            @include transition(height .35s);
-            @media screen and (max-width: 500px) {
-                width: 100%;
-                height: 115px;
-                padding: 0;
-                overflow: hidden;
-                &.expend {
-                    height: 355px;
-                    & .expend-button {
-                        background: -webkit-linear-gradient(rgba(0,0,0,0.5), transparent);
-                        background: -moz-linear-gradient(rgba(0,0,0,0.5), transparent);
-                        background: -o-linear-gradient(rgba(0,0,0,0.5), transparent);
-                        background: linear-gradient(rgba(0,0,0,0.5), transparent);
-                    }       
-                    & .thumb {
-                        &:after {
-                            background: transparent;
-                        }
-                    }
-                }
-            }
-            @media screen and (min-width: 501px) and (max-width: 750px) {
-                width: 50%;
-                height: 355px;
-            }
-            @media screen and (min-width: 751px) and (max-width: 880px) {
-                width: 33.3%;
-            }
-            @media screen and (min-width: 881px) {
-                width: 25%;
-            }
-            & a.click-area {
-                display: block;
-                text-decoration: none;
-                &:hover {
-                    & h3 {
-                        text-decoration: underline;
-                    }
-                }
-            }
-            & .expend-button {
-                position: absolute;
-                display: block;
-                left: 0;
-                top: 0;
-                width: 100%;
-                height: 115px;
-                z-index: 3;
-                background: none;
-                & h4 {
-                    font-size: 17px;
-                    color: #fff;
-                    width: 100%;
-                    height: 25px;
-                    padding: 0 34px;
-                    text-align: center;
-                    margin-top: 40px;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                }
-            }
-            &:last-child {
-                margin-right: 0;
-            }
-            & .thumb {
-                position: relative;
-                width: 100%;
-                height: 145px;
-                background: transparent no-repeat center bottom/cover;
-                @media screen and (max-width: 500px) {
-                    height: 210px;
-                    &:after {
-                        background: rgba(0,0,0,0.5);
-                        bottom: 0;
-                        content: '';
-                        left: 0;
-                        pointer-events: none;
-                        position: absolute;
-                        right: 0;
-                        top: 0;
-                        @include transition(background-color .5s);
-                        z-index: 1;
-                    }
-                }
-            }
-            & h3 {
-                max-height: 50px;
-                overflow: hidden;
-                color: #333;
-                font-size: 17px;
-                font-weight: normal;
-                @media screen and (max-width: 500px) {
-                    display: none;
-                }
-            }
-            & p {
-                height: 133px;
-                color: #666;
-                font-size: 15px;
-                overflow: hidden;
-                text-align: justify;
-                @media screen and (max-width: 750px) {
-                    height: 90px;
-                    padding: 0 25px;
-                }
-            }
-            & a {
-                font-size: 13px;
-                color: #999;
-                float: right;
-                @media screen and (max-width: 750px) {
-                    float: none;
-                    display: block;
-                    text-align: center;
-                }
-            }
-        }
-
-    }
-    & .more {
-        width: 100%;
-        text-align: center;
     }
 }
 
