--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -5,6 +5,10 @@ $pageWidth: 1080px;
 $widePicWidth: 890px;
 $halfPicWidth: 400px;
 
+/* Text color */
+$titleColor: #353535;
+$baseColor: #797979;
+
 * {
     vertical-align: top;
     box-sizing: border-box;
@@ -16,7 +20,7 @@ body {
     font-family: 'Noto Sans KR', "Roboto","Helvetica",arial,sans-serif;
     margin: 0;
     padding: 0;
-    color: #555;
+    color: $baseColor;
 }
 app-root {
     position: relative;
@@ -29,6 +33,10 @@ button {
     margin:0;
     padding:0;
     border:0;
+}
+dl, dt, dd {
+    margin:0;
+    padding:0;
 }
 p, h2, h3, h4 {
     font-weight: normal;
@@ -61,7 +69,7 @@ header {
         background: #fff;
         opacity: 1 !important;
         & .menu {
-            color: #666 !important;
+            color: $titleColor !important;
         }
     }
     & .logo {
@@ -408,7 +416,7 @@ header {
     white-space: nowrap;
     text-decoration: none;
     background: 0 0;
-    color: #a2a8b2;
+    color: $baseColor;
     cursor: pointer;
     @include transition(all 0.25s ease);
     & i.icon-top {
@@ -427,11 +435,4 @@ header {
     &.visible {
         bottom: 18px;
     }
-}
-
-footer {
-    color: #fff;
-    background-color: #3b3e43;
-    text-align: center;
-    padding: 60px 0;
 }
