--- a/src/styles/_scrap.scss
+++ b/src/styles/_scrap.scss
@@ -44,7 +44,7 @@
                     max-height: 50px;
                     margin-top: 15px;
                     overflow: hidden;
-                    color: #333;
+                    color: $titleColor;
                     font-size: 17px;
                     font-weight: normal;
                     @media screen and (max-width: 500px) {
@@ -59,7 +59,6 @@
                     height: 133px;
                     margin-top: 10px;
                     overflow: hidden;
-                    color: #666;
                     font-size: 15px;
                     text-align: justify;
                     @media screen and (max-width: 500px) {
