--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,8 +1,26 @@
 <div class="boundary">
     <h2 class="title">Store</h2>
     <div class="product-box">
-        <div class="product"><span>product</span></div>
-        <div class="product"><span>product</span></div>
-        <div class="product"><span>product</span></div>
+        <div *ngFor="let product of products" class="product">
+            <div class="top">
+                <div class="thumb" [style.background-image]="'url('+product.image+')'"></div>
+                <h3 class="title">{{product.title}}</h3>
+            </div>
+            <div class="separator">
+                <span class="edge-left"></span>
+                <span class="edge-right"></span>
+            </div>
+            <div class="bottom">
+                <div class="left">
+                    <h4>가격</h4>
+                    <span class="price"><strong>{{product.price}}</strong> 원</span>
+                    <span *ngIf="product.oprice != 0" class="o-price">{{product.oprice}} 원</span>
+                </div>
+                <div class="right">
+                    <h4>수량</h4>
+                    <i class="minus"></i><span class="quantity">9</span><i class="plus"></i>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
