--- a/src/styles/_store.scss
+++ b/src/styles/_store.scss
@@ -6,10 +6,96 @@
         text-align: center;
         & .product {
             display: inline-block;
-            width: 200px;
-            padding: 130px 0;
+            width: 320px;
+            margin: 0 8px;
             background: #fff;
-            border: 1px solid #c1c1c1;
+            & .top {
+                border: 1px solid #e1e1e1;
+                border-bottom: none;
+                & .thumb {
+                    position: relative;
+                    width: 100%;
+                    height: 220px;
+                    background: transparent no-repeat center bottom/cover;
+                }
+                & .title {
+                    padding: 30px 20px;
+                    width: 100%;
+                    font-size: 17px;
+                    color: #353535;
+                    line-height: 28px;
+                    text-align: center;
+                }
+            }
+            & .separator {
+                height: 12px;
+                background: url("/assets/images/store_dash.jpg") repeat 0 0;
+                & .edge-left {
+                    display: block;
+                    float: left;
+                    width: 7px;
+                    height: 12px;
+                    background: url("/assets/images/store_edge_left.jpg") no-repeat 0 0;
+                }
+                & .edge-right {
+                    display: block;
+                    float: right;
+                    width: 7px;
+                    height: 12px;
+                    background: url("/assets/images/store_edge_right.jpg") no-repeat;
+                }
+            }
+            & .bottom {
+                border: 1px solid #e1e1e1;
+                border-top: none;
+                & h4 {
+                    font-size: 14px;
+                    color: #999;
+                }
+                & .left {
+                    display: inline-block;
+                    width: 60%;
+                    margin: 15px 0 20px 0;
+                    padding: 5px 0 5px 15px;
+                    border-right: 1px solid #e1e1e1;
+                    & .price {
+                        display: block;
+                        margin-top: -3px;
+                        line-height: 35px;
+                        & strong {
+                            font-size: 29px;
+                            font-weight: normal;
+                            color: #ea002c;
+                            letter-spacing: -1px;
+
+                        }
+                    }
+                    & .o-price {
+                        display: block;
+                        font-size: 17px;
+                        text-decoration: line-through;
+                        margin-top: -3px;
+                    }
+                }
+                & .right {
+                    display: inline-block;
+                    width: 40%;
+                    margin: 15px 0 20px -4px;
+                    padding: 5px 15px 5px 0;
+                    & i.minus {
+
+                    }
+                    & .quantity {
+                        display: inline-block;
+                        margin-top: -3px;
+                        font-size: 29px;
+                        line-height: 35px;
+                    }
+                    & .plus {
+
+                    }
+                }
+            }
         }
     }
 }
